--- a/ingress.yaml
+++ b/ingress.yaml
@@ -10,8 +10,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: your.domain.com
-      http:
+    - http:
         paths:
           - path: /account-managment(/|$)(.*)
             pathType: Prefix
