--- a/ingress.yaml
+++ b/ingress.yaml
@@ -4,7 +4,6 @@ metadata:
   name: drive-together-ingress
   namespace: default
   annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
@@ -13,23 +12,16 @@ spec:
     - http:
         paths:
           - path: /account-managment(/|$)(.*)
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: account-managment
                 port:
                   number: 80
           - path: /ride-managment(/|$)(.*)
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: ride-managment
                 port:
-                  number: 80
-          - path: /(.*)
-            pathType: Prefix
-            backend:
-              service:
-                name: account-managment
-                port:
-                  number: 80
+                 number: 80
